Changed some text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>SpaciousHaven – Photo Gallery</title>
-    <meta name="description" content="SpaciousHaven photo gallery." />
+    <title>Spacious Haven – Photo Gallery</title>
+    <meta name="description" content="Spacious Haven photo gallery." />
 
     <style>
         :root {
@@ -259,7 +259,7 @@
                 <h1>SpaciousHaven</h1>
                 <div class="hint">Tap a photo to view · ← → keys on desktop</div>
             </div>
-            <p class="sub">A simple responsive photo gallery.</p>
+            <p class="sub">A Sonoran Desert Home for short-term rental.</p>
         </div>
     </header>
 
